--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,6 +1,6 @@
 #H2 Server Properties
-#Wed Nov 22 17:12:09 CET 2023
-0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/gamersquad|GamerSquad
+#Wed Nov 22 18:56:26 CET 2023
+0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/gamersquad;DB_CLOSE_DELAY\=-1;MODE\=LEGACY;AUTO_SERVER\=TRUE|GamerSquad
 webAllowOthers=true
 webPort=8092
 webSSL=false
