--- a/package.json
+++ b/package.json
@@ -159,6 +159,8 @@
     "node_modules"
   ],
   "overrides": {
-    "webpack": "5.74.0"
+    "webpack": ">=5.76.0",
+    "simple-git": ">=3.16.0",
+    "qs": ">=6.2.4"
   }
 }
