--- a/package.json
+++ b/package.json
@@ -159,8 +159,13 @@
     "node_modules"
   ],
   "overrides": {
-    "webpack": ">=5.76.0",
-    "simple-git": ">=3.16.0",
-    "qs": ">=6.2.4"
+    "webpack@>5.0.0 <6": ">=5.76.0",
+    "simple-git@>3.0.0 <4": ">=3.16.0",
+    "qs@>6.0.0 <7": ">=6.2.4",
+    "semver@>7.0.0 <8": ">=7.5.2",
+    "axios@>1.0.0 <2": ">=1.6.0",
+    "postcss@>8.0.0 <9": ">=8.4.31",
+    "tough-cookie@>4.0.0 <5": ">=4.1.3",
+    "xml2js@>0.0.0 <1": ">=0.5.0"
   }
 }
