--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,8 @@ Desktop.ini
 ######################
 /coverage/
 /.nyc_output/
+
+######################
+# Gamer Squad
+######################
+/.env
